<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">Ble Scaler</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
     <string name="range100000">0-1000000</string>
       <string name="sleeptime">sleep time</string>
         <string name="sensornum">sensor num</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
       <string name="PT">PT</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="title_activity_weight">Ble Scaler</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
	<string name="calibzero">calib zero</string>
	<string name="calibwgt">calib span</string>
	<string name="save">save</string>
	<string name="ret">return</string>
	<string name="connprt">conn prt</string>
	<string name="connoldprt">match prt</string>
	<string name="cancle">cancle</string>
	<string name="fama">calib value</string>
	<string name="input_fama">input calib value</string>
	<string name="Scaler1">Scaler1</string>
	<string name="Scaler2">Scaler2</string>
	<string name="Scaler3">Scaler3</string>
	<string name="Scaler4">Scaler4</string>
	<string name="start_auto_calib">start auto calib</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_characteristic">CharacteristicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="BlueWeight">BlueWeight</string>
    
    
    <string name="device_settings">param</string>
    <string name="user_settings">user</string>
    <string name="data_settings">data</string>
    <string name="main">main</string>
    <string name="four">four</string>
    <string name="back">return</string>
  	<string name="start">start</string>
  	<string name="prompt">prompt</string>
	
    <string name="stop">stop</string>
   <string name="debug">debug</string>
	<string name="setting">setting</string>
	<string name="calibrate">calibrate</string>
     <string name="printer">printer</string>
     
     <string name="report">report</string> 
    <string name="hello_world">Hello world!</string>
    <string name="select">select</string>
    <string name="calibK">calib</string>
    <string name="search">search</string>
    <string name="inputbtmachint">输入mac</string>
    <string name="connectbtmacaddress">连接蓝牙地址</string>
    <string name="contentdescription">内容描述</string>
    <string name="printform">print</string>
    <string name="print">print</string>
    <string name="conn_all">connect</string>
      <string name="tare">tare</string>
    <string name="zero">zero</string>
    <string name="gross">gross</string>
	<string name="poweroff">poweroff</string>
	<string name="sleep">sleep</string>
    	<string name="wake">wakeup</string>
    <string name="preset_tare">pt</string>
    <string name="zerotrack">zerotrack</string>
    <string name="zeroinit">zeroinit</string>
    <string name="handzero">hand</string>
    <string name="mtd">mtd</string>
    <string name="dignum">dot</string>
    <string name="div">div    </string>
    <string name="nov">full  </string>
	<string name="unit">unit</string>
	<string name="filter">filter </string>
	<string name="write">write</string>
	<string name="read">read</string>
	<string name="clearzero">clear</string>
	<string name="discard_tare">Tare</string>
	<string name="switch_ng">N/G</string>
</resources>
