<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bluetooth.le.WeightActivity" >
    <item
        android:id="@+id/device_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/device_settings"/>
     <item
        android:id="@+id/connect_printer"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/connprt"/>
     <item
        android:id="@+id/connect_paired"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/connoldprt"/>
     <item
        android:id="@+id/calib"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/calibK"/>
</menu>
