<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    tools:context="com.blescaler.ui.WeightActivity" >

    <TextView
        android:id="@+id/txtWgt"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/red"
        android:background="@drawable/bg"
        android:textSize="48sp" />

	<LinearLayout 
	      android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="horizontal"
	    >
	     <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/image_btn_press"
        android:layout_gravity="right"
        android:text="@string/save" /> 
    
      <Button
        android:id="@+id/btn_print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/image_btn_press"
        android:layout_gravity="right"
        android:text="@string/print" /> 
        
      <Button
        android:id="@+id/btn_con_all2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/image_btn_press"
        android:layout_gravity="right"
        android:text="@string/conn_all" /> 
	</LinearLayout>

	   
	<ListView  
      android:id="@+id/list"     
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
     /> 
</LinearLayout>