<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layWgt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvWgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/setbar_bg"
            android:gravity="center"
            android:text="12345"
            android:textColor="@color/red"
            android:textSize="72sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layFama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layCalibZero"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFamaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="砝码重量"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etWgt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/fama"
            android:inputType="number"
            android:labelFor="@id/etWgt"
            android:textColor="#00f"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layCalibZero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layWgt"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btCalbZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibzero" />

        <TextView
            android:id="@+id/tvZeros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#00f"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layWgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layOper"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btCalbWgt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibwgt" />

        <TextView
            android:id="@+id/tvLoad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#00f"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layCalibK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layWgt"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCalibKLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/calibK"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCalibK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#00f"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layOper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@id/btn_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/read" />

        <Button
            android:id="@id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>